<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorgrey">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Restrictions"
            android:textAlignment="center"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/activityHeaderText" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/business_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Phone"
                android:textAllCaps="true" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorwhite">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/CallInBusinesHourOnly"
                    android:textColor="#000" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/callSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:gravity="end"
                    android:textColor="@color/colorgreen"
                    android:textOff="OFF"
                    android:textOn="ON" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/scrollView2"
                android:padding="10dp"
                android:text="@string/TurinOffBrodacast" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextMsg"
                android:textAllCaps="true" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorwhite">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/TextOnlyBusinesHour"
                    android:textColor="#000" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/textSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:gravity="end"
                    android:textColor="@color/colorgreen"
                    android:textOff="OFF"
                    android:textOn="ON" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/TurnThisOffToBroadcast" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
