<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeName">

        <TextView
            android:id="@+id/toolbartxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/emailRoute"
            android:textAlignment="center"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/activityHeaderText" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorwhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="8756545654@mindmesolo.com"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/heading_two" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/emailRouteText"
                    android:textColor="@color/colorLeadRoutesFont"
                    android:textSize="@dimen/simple_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorgrey"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/greetingImg"
                    android:layout_width="29dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/envelopewhite" />

                <TextView
                    android:id="@+id/greetingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/greetingImg"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/emailGreeting"
                    android:textSize="@dimen/simple_text_big" />
            </RelativeLayout>

            <TextView
                android:id="@+id/greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="Hello! Thank you for interest in business name. We'll be touch in shortly."
                android:padding="10dp"
                android:text=""
                android:textColor="@color/colorblack"
                android:textSize="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorgrey"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="17dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ctawhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/imgView"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/calltoaction"
                    android:textSize="@dimen/simple_text_big" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:text="@string/calltoactionText"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:text="Enter a URL below:"
                android:textSize="13dp" />

            <RelativeLayout
                android:id="@+id/openLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/cta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imageLink"
                    android:gravity="start"
                    android:hint="www.mindmemobile.com"
                    android:padding="10dp"
                    android:textColor="@color/colorTextRoutes"
                    android:textSize="@dimen/simple_text" />

                <ImageButton
                    android:id="@+id/imageLink"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/arrow"
                    android:gravity="end" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorgrey"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:paddingLeft="15dp"
                    android:paddingStart="15dp"
                    android:text="@string/alertNewLeads"
                    android:textSize="@dimen/simple_text" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="@string/push"
                    android:textSize="@dimen/simple_text" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/pushNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="@string/email"
                    android:textSize="@dimen/simple_text" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/emailNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="@string/sms"
                    android:textSize="15dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/smsNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>