<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/colorgreen"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:src="@drawable/mindmewhite" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorwhite"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/login_layout_margin"
                android:layout_marginTop="@dimen/login_margin"
                android:text="Your New Email"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:text="@string/emailText"
                android:textAlignment="center"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/mindmeEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/login_layout_margin"
                android:layout_marginTop="@dimen/login_layout_margin"
                android:text="userid@mindmemail.com"
                android:textColor="@color/colorgreen"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:text="@string/email1"
                android:textAlignment="center"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:text="@string/email2"
                android:textAlignment="center"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:text="@string/email3"
                android:textAlignment="center"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_margin"
                android:background="@drawable/contactform" />


            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/login_margin"
                android:layout_marginTop="@dimen/login_margin"
                android:background="@drawable/login_button"
                android:onClick="MainActivity"
                android:paddingLeft="@dimen/login_margin"
                android:paddingRight="@dimen/login_margin"
                android:text="Get Started"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite"
                android:textSize="20dp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>